[package]
name = "feeless"
version = "0.1.8"
authors = ["gak <gak@gak0.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Nano (cryptocurrency) node and utilities such as nano addresses, hashing blocks, signing, etc."
repository = "https://github.com/feeless/feeless"
documentation = "https://docs.rs/feeless/"
keywords = ["nano", "cryptocurrency", "decentralized"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
homepage = "https://feeless.dev/"

[[example]]
name = "cli"

[features]
default = ["full"]
full = ["pcap", "node", "wallet"]
node = ["sled"]
wallet = []

# pcap needs node for all the messages. This could be moved outside of node in the future.
pcap = ["node", "pcarp", "etherparse"]

[dependencies]
num_cpus = "1.0"
once_cell = "1.7.0"
ansi_term = "0.12"
async-trait = "0.1.42"
hex = "0.4.2"
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
tracing = "0.1"
tracing-subscriber = "0.2"
bigdecimal = { version = "0.2.0", features = ["serde"] }
tokio = { version = "1.4.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
blake2 = "0.9.1"
num = "0.4.0"
bytes = "1.0.1"
bitvec = "0.21.0"
regex = "1.4.5"
rand = "0.8.3"
tiny-bip39 = "0.8.0"
chrono = "0.4.19"
doc-comment = "0.3.3"
fd-lock = "2.0.0"

ed25519-dalek-bip32 = "0.1.1"

ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
#ed25519-dalek = { path = "../../ed25519-dalek" }
#ed25519-dalek = { git = "https://github.com/gak/ed25519-dalek.git", branch = "blake2b" }

# This is a fix for "multiple `BITS` found" while building.
# It can be removed once the following is fixed:
# https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"

# node only
sled = { version = "0.34.6", optional = true }

# pcap only
pcarp = { version = "1.2.0", optional = true }
etherparse = { version = "0.9.0", optional = true }

[dev-dependencies]
cmd_lib = "0.14.4"