[package]
name = "feeless"
version = "0.1.12-alpha.0"
authors = ["gak <gak@gak0.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Nano (cryptocurrency) node and utilities such as nano addresses, hashing blocks, signing, etc."
repository = "https://github.com/feeless/feeless"
documentation = "https://docs.rs/feeless/"
keywords = ["nano", "cryptocurrency", "decentralized"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
homepage = "https://feeless.dev/"

[[example]]
name = "cli"

[features]
default = ["full"]
full = ["pcap", "node", "rpc_client", "rpc_server"]
node = ["rpc_server", "sled"]
rpc_client = ["reqwest", "colored_json", "serde_with"]
rpc_server = ["rpc_client", "warp", "node"]
deny_warnings = []

# pcap needs node for all the messages. This could be moved outside of node in the future.
pcap = ["node", "pcarp", "etherparse"]

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.38"
async-trait = "0.1.50"
bigdecimal = { version = "0.2.0", features = ["serde"] }
bitvec = "0.22.3"
blake2 = "0.9.1"
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
directories = "3.0.2"
doc-comment = "0.3.3"
fd-lock = "2.0.0"
futures = "0.3.15"
hex = "0.4.2"
num = "0.4.0"
num_cpus = "1.0"
once_cell = "1.7.2"
rand = "0.8.3"
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"

# This is a modified version of https://github.com/Fiono11/tiny-bip39
# which uses thiserror for error handling instead of anyhow.
# https://github.com/Fiono11/tiny-bip39/commit/d2b3e6a52be395fd652e546080e430ac71bb6c66
# It lives in external/tiny-bip39
bip39 = { version = "0.8.0", package = "tiny-bip39-feeless" }

# This is a modified version of https://github.com/jpopesculian/ed25519-dalek-bip32
# which uses thiserror for error handling instead of failure.
# https://github.com/Fiono11/ed25519-dalek-bip32/commit/dfda6b45c22b9260d3937dcd4b96dd1f3bc92ae8
# It lives in external/ed25519-dalek-bip32
ed25519-dalek-bip32 = { version = "0.1.1", package = "ed25519-dalek-bip32-feeless" }

# This is a modified version of https://github.com/dalek-cryptography/ed25519-dalek
# which hashes using blake2b instead of sha256.
# https://github.com/gak/ed25519-dalek/commit/82ba167fdb3a7f667812f309acc98241e0959c8f
# It lives in external/ed25519-dalek
ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }

# node only
sled = { version = "0.34.6", optional = true }

# pcap only
etherparse = { version = "0.9.0", optional = true }
pcarp = { version = "1.2.0", optional = true }

# rpc_client only
colored_json = { version = "2.1.0", optional = true }
reqwest = { version = "0.11.3", optional = true, default-features = false, features = ["rustls-tls"] }
serde_with = { version = "1.9.1", optional = true, features = ["chrono"] }

# rpc_server only
warp = { version = "0.3.1", optional = true }

[dev-dependencies]
cmd_lib = "1.1.0"
pretty_env_logger = "0.4.0"