[package]
name = "feeless"
version = "0.1.0"
authors = ["gak <gak@gak0.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Nano (cryptocurrency) types and utilities, nano addresses, hashing blocks, signing, etc."

[dependencies]
anyhow = "1.0.38"
bigdecimal = { version = "0.2.0", features = ["serde"] }
tokio = "1.1.1"
serde = { version = "*", features = ["derive"] }
blake2 = "0.9.1"
hex = "0.4.2"
bytes = "1"
bitvec = "0.20.1"
regex = "1.4.3"
rand = "*"

ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
#ed25519-dalek = { path = "../../ed25519-dalek" }
#ed25519-dalek = { git = "https://github.com/gak/ed25519-dalek.git", branch = "blake2b" }
