[package]
name = "feeless_node"
version = "0.1.0"
authors = ["gak <gak@gak0.com>"]
edition = "2018"

[dependencies]
feeless = { path = "../core" }

tokio = { version = "*", features = ["full"] }
bitvec = "0.20.1"
anyhow = "1.0.38"
rand = "0.8.3"
serde = { version = "*", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
sled = "*"
async-trait = "*"